--- a/index.html
+++ b/index.html
@@ -4,21 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi portafolio</title>
 
+</head>
 
 <body>
-    <header>Mi portafolio</header>
-    <nav>
-        <ul>
-            <li><a href="#experiencia">Experiencia</a></li>
-            <li> <a href="#Proyectos">Proyecto</a></li>
-            <li><a href="#Contacto">Contacto</a></li>
+    <header>
+        <h1>Mi portafolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li> <a href="#Proyectos">Proyecto</a></li>
+                <li><a href="#Contacto">Contacto</a></li>
 
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="Ultimas actualizaciones">
+            <h4>Este portafolio informará de los avances que he tenido</h4>
+
+    </main>
+    <strong>
+        <h2>Sobre mí</h2>
+    </strong>
+
+    <img src="SRC/IMG/perfil.jpg" alt="Imagen de perfil" width="70px
+    ">
+    <p>Me llamo Álvaro Andrés Molina Acuña con 19 años de edad actualmente formo parte de la empresa equielect
+        como auxiliar logistico y estoy estudian asistente en programacion.
+        Me gusta la electronica</p>
+
+    El computo</p>
+    <br>
+    <h4>Creacion de proyectos electronicos como:</h4>
+    <ul>
+        <li>Fuentes de laboratorios</li>
+        <li>amplificadores de audio</li>
+        <li> reparacion de equipos electronicos</li>
+    </ul>
+
+    <footer>
+        <p>&copy; 2024 Mi portafolio</p>
+        <p>
+            <amolinaancesde class="net">amolinaan@cesde.net</amolinaancesde>
+        </p>
+    </footer>
+    <section id="Experiencias">
+        <h2>Mis Experiencias</h2>
+        <P>A lo largo de este perodo de tiempo como emplreado de la parte operativa de quielect he experimentado cambios
+            que me han ayudado a resolver conflictos que se presentan cada dia.</P>
+        <p><b>Mis experiencias como empleado y a la vez estudiante del cesde han sido buenas y malas tales como:</b></p>
+        <ul id=>
+            <li>Ampliamiento de mi conocimiento</li>
+            <li>Crecimiento empresarial y personal</li>
+            <li>Dias agotadores y con muchos fallos</li>
 
         </ul>
-    </nav>
-    </head>
+
+
+
+    </section>
+    <section>
+        <h2>Proyectos</h2>
+        <ul>
+            <li>
+                <h4>Fuente de alimentacion variable</h4>
+                <P>Esta esta destinada a la repracion de o testeos de aparatos electronicos que requieren un voltaje
+                    espesifico para su funcionamiento
+
+
+                </P>
+                <img src="SRC/IMG/WhatsApp Image 2024-09-12 at 8.09.07 PM (1).jpeg" alt="" width="70px">
+                <a
+                    href="https://osakaelectronicsltda.com/instrumentacion-y-medicion/fuentes-de-voltaje-regulada/?srsltid=AfmBOophEH6okQQwMUGS4XTue5Wimnua__4345eMQf9ciNMUE6AJw7GE">Pagina</a>
+
+            </li>
+
+            <li>
+                <H4>Amplificador de sonido portatil</H4>
+                <P>Sirve para el uso de bocinas o parlantes que no estan amplificados nativamente</P>
+                 <img src="SRC/IMG/WhatsApp Image 2024-09-12 at 8.09.07 PM (3).jpeg" alt="" width="70px">
+                 <a href="https://www.tecnopura.com/producto/modulo-amplificador-digital-tpa3118-para-audio-monofonico-60w-8-24vdc/">Pagina amplificador</a>
+            </li>
+        </ul>
+
+    </section>
+    
+
+
 </body>
 
 </html>
